# tradingbot

./: README.md  main.py  pyproject.toml  test_data.py
agents/: data_agent.py  forecasting_agent.py  market_agent.py  order_agent.py  risk_agent.py
config/: constants.py  logger.py
tools/: apify_scraper.py  kelly_criterion.py  kronos_predictor.py  market_discovery.py  order_execution.py
tools/model/: kronos.py
