[project]
name = "tradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=3.0.4",
    "hermes-agent>=0.18.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "torch>=2.0.0",
    "einops==0.8.1",
    "huggingface-hub>=1.5.0",
    "matplotlib==3.9.3",
    "tqdm==4.67.1",
    "safetensors==0.6.2",
]
